[project]
name = "comfyui-unprompted"
description = "A node that processes input text with the [a/Unprompted templating language](https://github.com/ThereforeGames/unprompted).\n"
version = "0.2.1"
license = "LICENSE"
dependencies = ["unprompted@git+https://github.com/ThereforeGames/unprompted", "opencv-python", "nltk", "pattern@git+https://github.com/NicolasBizzozzero/pattern"]

[project.urls]
Repository = "https://github.com/ThereforeGames/ComfyUI-Unprompted"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "thereforegames"
DisplayName = "ComfyUI-Unprompted"
Icon = ""
